# jpp-zad2

./: .gitignore  CHANGELOG.md  Makefile  README.md  grammar.cf  jpp-zad2.cabal
app/: Eval.hs  Main  Main.hs  Persistance.hs  Transformers.hs  tmp
app/Grammar/: Abs.hs  Lex.hs  Par.hs
examples/: arr.lat  core.lat  errors.lat  fun.lat  gc.lat  objects.lat  printing.lat  scope.lat  while.lat
src/: Transformers.hs
src/Grammar/: Doc.txt  Lex.x  Par.y  Print.hs  Skel.hs
