cabal-version:      2.4
name:               jpp-zad2
version:            0.1.0.0
maintainer:         a.m.derylo@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable interpreter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
